Fix CV link and remove duplicate project entry
Updated CV download link and fixed duplicate project card.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>I blend creativity with technology to craft stunning digital experiences. From eye-catching designs to functional websites, I bring ideas to life with passion and precision.</p>
             <div class="hero-buttons">
                 <a href="#contact" class="btn-primary">Contact Me</a>
-               <a href="assets/mv.pdf" class="btn-secondary" download> View CV</a>
+               <a href="assets/Manzi_Vaillant_CV.pdf" class="btn-secondary" download> Download CV</a>
 
             </div>
         </div>
@@ -168,4 +168,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
