Modify hero image names  image names
Updated hero image and experience icons.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-image">
-          <img src="assets/port.png" alt="Manzi Vaillant">
+          <img src="assets/heroimg.png" alt="Manzi Vaillant">
 
         </div>
         <div class="hero-content">
@@ -63,7 +63,7 @@
         <div class="experience-grid">
             <div class="experience-item">
              <div class="experience-icon">
-    <img src="assets/a1.jpg" alt="Experience Icon" style="width:40px; height:40px;">
+    <img src="assets/besiltech.jpg" alt="Experience Icon" style="width:40px; height:40px;">
 </div>
 
                 <div class="experience-details">
@@ -74,7 +74,7 @@
             </div>
             <div class="experience-item">
              <div class="experience-icon">
-    <img src="assets/a2.jpg" alt="Experience Icon" style="width:30px; height:30px;">
+    <img src="assets/bigcradle.jpg" alt="Experience Icon" style="width:30px; height:30px;">
 </div>
 
                 <div class="experience-details">
@@ -85,7 +85,7 @@
             </div>
             <div class="experience-item">
              <div class="experience-icon">
-    <img src="assets/c3.jpg" alt="Experience Icon" style="width:40px; height:40px;">
+    <img src="assets/creativesakko.jpg" alt="Experience Icon" style="width:40px; height:40px;">
 </div>
 
                 <div class="experience-details">
@@ -170,3 +170,4 @@
 </body>
 
 </html>
+
