Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="experience-item">
              <div class="experience-icon">
-    <img src="assets/creativesakko.jpg" alt="Experience Icon" style="width:40px; height:40px;">
+    <img src="assets/creativesaako.jpg" alt="Experience Icon" style="width:40px; height:40px;">
 </div>
 
                 <div class="experience-details">
@@ -170,4 +170,5 @@
 </body>
 
 </html>
+
 
