--- a/index.html
+++ b/index.html
@@ -129,6 +129,22 @@
                 </a>
         </div>
 
+        <div class="project-card">
+    <h3>Hesbuquest: A Gamefied Math Game</h3>
+    <p>An interactive, gamified platform designed to make learning math fun and engaging for young users, utilizing modern web technologies.</p>
+    <a href="#" class="btn-secondary" target="_blank">
+        View Project 
+    </a>
+</div>
+
+<div class="project-card">
+    <h3>Personal Finance Tracker</h3>
+    <p>A web application for tracking income and expenses, offering dashboard visualization and user authentication with Firebase.</p>
+    <a href="https://github.com/vaillantm/finance-tracker" class="btn-secondary" target="_blank">
+        View Project
+    </a>
+</div>
+
     </div>
 </section>
 
@@ -170,5 +186,6 @@
 </body>
 
 </html>
+
 
 
