--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="project-card">
     <h3>Hesbuquest: A Gamefied Math Game</h3>
     <p>An interactive, gamified platform designed to make learning math fun and engaging for young users, utilizing modern web technologies.</p>
-    <a href="#" class="btn-secondary" target="_blank">
+    <a href="https://github.com/vaillantm/trainee-project-manzi" class="btn-secondary" target="_blank">
         View Project 
     </a>
 </div>
@@ -186,6 +186,7 @@
 </body>
 
 </html>
+
 
 
 
